PFA_runout_DOGAMI. 1st Draft

--- a/analysis/PFA_runout_DOGAMI.qmd
+++ b/analysis/PFA_runout_DOGAMI.qmd
@@ -2,6 +2,11 @@
 title: "PFA Debris-Flow Runout Analysis"
 author: "Dan Miller"
 format:
+  docx:
+    toc: true
+    number-sections: true
+    highlight-style: github
+    echo: false
   html:
     toc: true
     toc-float: true
@@ -9,6 +14,8 @@ format:
     number-sections: true
     code-folding: hide
     theme: readable
+    code-fold: true
+    code-overflow: scroll
 #  pdf:
 #    number-sections: true
 #    colorlinks: true
@@ -24,7 +31,7 @@ format:
 #            table-align-text-pre=false,
 #            table-align-text-post=false
 #         ]}
-date: May 17, 2023
+date: May 18, 2023
 editor: visual
 number-sections: true
 params:
@@ -38,7 +45,7 @@ params:
     input: text
   input_list:
     label: Text file containing a list of directories where the data files are found.
-    value: c:/tempDir/in/DEMs/track_list.txt
+    value: c:/tempDir/in/DEMs/track_list.
     input: text
   data_dir:
     label: Data Directory
@@ -81,7 +88,7 @@ The Miller-Burnett models identify the channels susceptible to direct impacts fr
 
 Numerous studies have examined controls on debris-flow runout. Some specific to the Pacific Northwest include Benda and Cundy [-@benda1990]; Hofmeister et al. [-@hofmeister2002]; Fannin and Rollerson [-@fannin1993]; Robison et al. [-@robison1999]; May [-@may2002]; Lancaster et al. [-@lancaster2003]; Miller and Burnett [-@miller2008]; Guthrie et al. [-@guthrie2010]; Coe [-@coe2011], and Reid et al. [-@reid2016]. These and other studies consistently point to several factors that influence runout lengths:
 
--   channel gradient and confinement,
+-   "channel gradient and confinement,
 
 -   abrupt changes in flow direction at channel junctions,
 
@@ -450,7 +457,7 @@ The 1996 Storm study included 6 study areas following the February 1996 storm an
 
 ![](images/1996_Storm_Study_Sites.png){#fig-DataLocations fig-align="center" width="6in"}
 
-Surveys at these three areas including detailed mapping of channel impacts associated with the storm. Being field based, these surveys were able to distinguish four types of debris-flow-runout behavior: 1) a scoured debris path, along unchannelized topography or within channels greater than 40% gradient, 2) channelized flow with scour, 3) channelized flow with deposition, and 4) transitional channelized flow with no net scour or deposition. At these sites, all channels with gradients up to 40% were surveyed and storm impacts were categorized as high, medium, or low and recorded at \~150-foot increments [@robison1999]. High impacts were associated with "debris torrents" and impacts in these channels were further categorized as scour, deposit, transitional, or debris jam. Although "debris torrent" and "debris flow" are not synonomous, we used this mapping to calibrate a logistic regression model for the probability of debris-flow scour or deposition.
+Surveys at these three areas including detailed mapping of channel impacts associated with the storm. Being field based, these surveys were able to distinguish four types of debris-flow-runout behavior: 1) a scoured debris path, along unchannelized topography or within channels greater than 40% gradient, 2) channelized flow with scour, 3) channelized flow with deposition, and 4) transitional channelized flow with no net scour or deposition. At these sites, all channels with gradients up to 40% were surveyed and storm impacts were categorized as high, medium, or low and recorded at \~150-foot increments [@robison1999]. High impacts were associated with "debris torrents" and impacts in these channels were further categorized as scour, deposit, transitional, or debris jam. Although "debris torrent" and "debris flow" are not synonymous, we used this mapping to calibrate a logistic regression model for the probability of debris-flow scour or deposition.
 
 A limitation of the 1996 Storm study was the poor accuracy and precision of the digitized landslide initiation sites and debris-flow tracks; a consequence of the accuracy and precision available from the 1:24,000-scale, 40-foot-contour USGS topographic maps available at that time. These base maps did not resolve many of the hollows associated with landslide initiation and they did not accurately reflect the flow paths for landslides initiated upslope. Even though the field mapping may have accurately recorded channel impacts, this mapping could not be accurately digitized because the base maps did not adequately represent the actual topography. Miller and Burnett [-@miller2008] used the 1996 Storm data from the Mapleton study site to calibrate their model. They relied on line-trace DEMs interpolated to a 10-m grid from those same 1:24,000-scale topographic base maps, so their analysis suffered from the same limitations on precision of landslide initiation and debris-flow-track locations. We now have 1-m lidar-derived DEMs that provide a much more accurate and precise representation of the topography.
 
@@ -1151,7 +1158,7 @@ effect_dep <- ggplot(data=geo_dep, aes(x=geo, y=.value)) +
 
 Recall @fig-Rock-Type; channels at each of the three study sites fall primarily in a single rock type. These are sedimentary for Mapletong, volcanic at Tillamook, and volcaniclastic at Vida. Very little channel length occupies igneous/metamorphic and unconsolidated types and none of the sites has more than two rock types. The partial dependence plot indicates a slight increase in the probability for scour going from sedimentary to volcanic to volcaniclastic rock types with the opposite trend for the probability of deposition. The igneous/metamorphic shows a large difference relative to the other rock types, but with so little data for this and the unconsolidated types, there is some uncertainty in that result.
 
-### Model Performance
+### Model Performance {#ModelPerformance}
 
 Logistic regression as used here is a "classification" model, in that we seek to classify debris-flow tracks as locations of scour, transitional flow, or deposition. Generally, performance of a classification model is measured by the proportion of cases correctly classified. Our interest, however, is not in classification, but in the probability for scour or deposition. These are the values used in @eq-Pscour and @eq-Pdep to estimate the scoured and deposited volumes along any debris-flow track. We found with the plots shown in Section @sec-DataScourDep that there is considerable overlap in the predictor values at which scour and deposition occur. The probabilities output by the model indicate the proportion of track length in each class within any increment of predictor values. If we look at 100 randomly selected channel nodes with a modeled probability for scour of 0.1, none will be classified as "scour", but we should find that one of them fell within a scoured portion of a track and 99 of them did not. That prediction of one percent that was scoured is useful information that we want to capitalize on. Given that the modeled probability represents a proportion, the integral of probability over track length then gives the track length where scour or deposition were recorded. For our use, comparison of the predicted and measured length of scour and deposition provides a useful measure of model performance.
 
@@ -1507,8 +1514,22 @@ fit_cox$coefficients
 
 # Discussion
 
-Development of the orginal set of linked models for debris-flow initiation and runout [@miller2007; @miller2008] was motivated by a need to link processes of sediment and wood flux from hillslopes to channels to better characterize the channel and valley-floor environments affected by these fluxes (see [CLAMS](https://www.fsl.orst.edu/clams/)). Such characterization extends directly to quantitative metrics for evaluating riparian and upslope buffers in timber-land management in the context of changes in sediment and wood flux rates \[@burnett2007\], which is why they proved useful for the PFA. This and a companion document describe our efforts to update these models using data and analysis resources that have become available since development of the original models.
+Development of the orginal set of linked models for debris-flow initiation and runout [@miller2007; @miller2008] was motivated by a need to link processes of sediment and wood flux from hillslopes to channels to better characterize the channel and valley-floor environments affected by these fluxes (see [CLAMS](https://www.fsl.orst.edu/clams/)). Such characterization extends directly to quantitative metrics for evaluating riparian and upslope buffers in timber-land management in the context of changes in sediment and wood flux rates [@burnett2007], which is why they proved useful for the PFA. This and a companion document describe our efforts to update these models using data and analysis resources that have become available since development of the original models.
 
 There are other modeling options available. Several process-based and semi-empirical models are applied for debris-flow runout, including the RAMMS [@mikos2021] and Flow-R [@horton2013] models in Europe, the [Laharz and D-Claw](https://www.usgs.gov/programs/VHP/usgs-scientists-model-landslides-lahars-and-debris-flows) models developed by the USGS, and recent development of agent-based models in Canada [@guthrie2021a] and at the University of Washington [@keck2021]. DOGAMI with [Special Paper 53](https://www.oregongeology.org/pubs/sp/SP-53/p-SP-53.htm) provides an ArcGIS toolbox for assessing debris-flow susceptibility, relying in part on extension of the Laharz model for estimating the extent of debris-flow inundation [@reid2016]. All of these are useful approaches for assessing potential for debris-flow runout, but none provide quantitative estimates of runout and delivery probability that can be readily applied at regional extents. It will be instructive to incorporate these various approaches into regional assessments of runout potential; every model has certain strengths and weaknesses and we will obtain better predictions by leveraging the strengths of multiple models, but currently the only functional option I am aware of for quantitative regional analyses is our use of survival analysis as described in Miller and Burnett [-@miller2008] and greatly expanded on here.
 
-An important development for data analysis is the rapidly expanding use of machine learning in the building and evaluation of empirical models. Powerful computers with large memory and storage capacities have made analysis of large datasets commonplace (like those used here; the DEMs contain millions of data points, the traced runout tracks tens of thousands). Machine-learning software, like the [mlr3](https://mlr3.mlr-org.com/) R package used here, automate model runs so that thousands of input options can be explored to examine the sensitivity of model outputs to input parameters, as we used here to look at feature importance. Key aspects of current data-analysis protocols are examination of relationships between input variables and quantification of uncertainty in model outputs.
+An important development for data analysis is the rapidly expanding use of machine learning in the building and evaluation of empirical models. Powerful computers with large memory and storage capacities have made analysis of large datasets commonplace (the DEMs contain millions of data points, the traced runout tracks tens of thousands). Machine-learning software, like the [mlr3](https://mlr3.mlr-org.com/) R package used here, automate model runs so that thousands of input options can be explored to examine the sensitivity of model outputs to input parameters, as used here to look at feature importance. Key aspects of current data-analysis protocols are visual examination of relationships between input variables and quantification of uncertainty in model outputs. I have gone to some length here to show how variables are related and how such recognition of those relationships can guide model development. A general strategy for model evaluation is to "train" a model with a subset of the available data and then "test" it on the remaining data. This is appropriate when we have data with which to evaluate model predictions on the test data, as done here for predictions of probability of scour and deposition (@sec-ModelPerformance).
+
+I have not done this for predictions of runout probability. There is no off-the-shelf software for that evaluation and we are still working on developing the code to do that. These predictions rely on linkages between multiple models. First is estimation of landslide initiation probability. Then estimates of probability for scour and deposition to calculate the volume ratio. Then estimates for the coefficients in the relative risk model for survival. Each of these models must be trained on landslide inventory data from a subset of the total study area and the calculations then carried through each step to generate a survival curve for runout from every potential initiation point over the training area. These survival curves give probability of runout from each initiation point, which must then be integrated over all potential runout tracks to calculate the total length of delivering debris-flow track. This is a prediction that can then be made for the test portion of the study area and compared to the measure track length. Software for doing that is still a work in progress.
+
+For the PFA, the models are used to identify "debris-flow traversal areas" and "sediment source areas". These are based on a proportion of the expected length of delivering debris-flow tracks (i.e., those that extend to fish-bearing streams) through nonfish channels and a proportion of the total flux of debris-flow-delivered material to fish-bearing channels. We are interested, therefore, in how sensitive those quantities are to uncertainties in the input variables. This too requires subsampling of the available inventory data, training the models on that data, and then delineation of the debris-flow traversal and sediment source areas over the PFA domain. And then repeating that procedure multiple times with different subsamples. Variability across the resulting ensemble of traversal and source areas then provides a quantitative measure of how sensitive the model outputs are to the input variables.
+
+One aspect of the PFA prescriptions for steep slopes may result in fairly large sensitivity, particularly for the designated sediment source areas. Both the extent of designated debris-flow traversal areas and designated sediment source areas are contingent on specified thresholds. The "debris flow traversal area sub-basins" are defined as "catchments within USGS HUC 4th field (8-digit) basins that contain Debris Flow Traversal Areas that have a probability of traversal in the upper 20%" ([PFA Report](https://www.oregon.gov/odf/aboutodf/documents/2022-odf-private-forest-accord-report.pdf), page 31). Thus, a relatively small change in the modeled traversal proportions could change the number of debris-flow-traversal sub-basins. The Designated Sediment Source Areas are delineated only within the debris-flow-traversal sub-basins, so a change in the number of sub-basins can have a large influence on the total area of Designated Sediment Source Areas.
+
+Sensitivity of model outputs applies not only to uncertainties in the input data used to train the models, but also in the choice of predictor variables (covariates, explanatory variables, independent variables, different terms for the same thing) used in the models. This sensitivity applies not only to the choice of predictors, but also to how they are related to model outputs. For example, with logistic regression, the logarithm of the odds is assumed linear in the predictors (@eq-logit). Such a relationship may not accurately represent actual system behavior. What if the probability for scour increases with increasing gradient up to a point and then decreases after that because, say, very steep slopes have no soil to scour? There may be relatively few extreme-gradient examples in the data (the ODF surveys only extended through channels up to 40%), so the trained model will indicate increasing probability of scour with increasing gradient. If, however, we included a quadratic term in the logit (gradient squared), then the trained model could properly characterize the system behavior. However, because such cases might be relatively rare, this change would have little impact on global measures of model performance. This example highlights the need for careful consideration of how a model works relative to our understanding of how the system being modeled works. Such comparisons work both ways: we still have a lot to learn about the geomorphic and ecologic roles of debris flows, so failures of our models to predict observations can lead to improved understanding. This requires that model predictions be comparable and compared to observations. I must apologize for not having done that fully with this document, but point out that we are working on software for making those comparisons.
+
+This discussion may make one leery of relying on models for decision making and planning purposes. That is the intent. It is important to understand, as pointed out repeatedly by [George Box](https://en.wikipedia.org/wiki/All_models_are_wrong), that "all models are wrong, but some are useful". We cannot fully characterize this complex natural system. We can, however, characterize what we think we understand and use quantitative models to guide decision making and planning. This is contingent on a key point: the models should be quantitative. This allows use of cost-benefit types of analyses by which the potential consequences of a decision choice can be made and testing of model predictions, by which our understanding of the system and the models used to characterize that system can be improved.
+
+Efforts at developing such models and providing tools for their use is ongoing. An important aspect of those efforts is a focus on model transparency and replicability [@alarid-escudero2019a; @marwick2018a; @nüst2020a]. To that end, we are developing software under open-source licenses and providing code on public repositories on github (<https://github.com/TerrainWorks-Seattle>). This document, written in [Quarto](https://quarto.org/), includes the code used for model development and testing (if rendered to html; I suppressed output of the code blocks for Word documents). We rely on data in the public domain. This is an ongoing effort and we are far from finishing, but our intent is that anyone with the appropriate computer hardware can obtain the code used here and replicate these results, build models with other datasets, and modify the models to better represent the systems being modeled. The PFA provides an example of how such models can be used, and hopefully will show how such models can be tested and improved as the results are applied.
+
+# References
