--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -781,3 +781,48 @@
 	doi = {10.1130/abs/2021am-368944},
 	url = {http://dx.doi.org/10.1130/abs/2021AM-368944}
 }
+
+@article{alarid-escudero2019a,
+	title = {A Need for Change! A Coding Framework for Improving Transparency in Decision Modeling},
+	author = {Alarid-Escudero, Fernando and Krijkamp, Eline M. and Pechlivanoglou, Petros and Jalal, Hawre and Kao, Szu-Yu Zoe and Yang, Alan and Enns, Eva A.},
+	year = {2019},
+	month = {09},
+	date = {2019-09-24},
+	journal = {PharmacoEconomics},
+	pages = {1329--1339},
+	volume = {37},
+	number = {11},
+	doi = {10.1007/s40273-019-00837-x},
+	url = {http://dx.doi.org/10.1007/s40273-019-00837-x},
+	langid = {en}
+}
+
+@article{marwick2018a,
+	title = {Packaging Data Analytical Work Reproducibly Using R (and Friends)},
+	author = {Marwick, Ben and Boettiger, Carl and Mullen, Lincoln},
+	year = {2018},
+	month = {01},
+	date = {2018-01-02},
+	journal = {The American Statistician},
+	pages = {80--88},
+	volume = {72},
+	number = {1},
+	doi = {10.1080/00031305.2017.1375986},
+	url = {http://dx.doi.org/10.1080/00031305.2017.1375986},
+	langid = {en}
+}
+
+@article{nüst2020a,
+	title = {Practical Reproducibility in Geography and Geosciences},
+	author = {{Nüst}, Daniel and Pebesma, Edzer},
+	year = {2020},
+	month = {10},
+	date = {2020-10-13},
+	journal = {Annals of the American Association of Geographers},
+	pages = {1300--1310},
+	volume = {111},
+	number = {5},
+	doi = {10.1080/24694452.2020.1806028},
+	url = {http://dx.doi.org/10.1080/24694452.2020.1806028},
+	langid = {en}
+}
