PFA_initiatioin_DOGAMI. initial commit

--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -826,3 +826,33 @@
 	url = {http://dx.doi.org/10.1080/24694452.2020.1806028},
 	langid = {en}
 }
+
+@article{zhu2017,
+	title = {An Updated Geospatial Liquefaction Model for Global Application},
+	author = {Zhu, Jing and Baise, Laurie G. and Thompson, Eric M.},
+	year = {2017},
+	month = {05},
+	date = {2017-05-02},
+	journal = {Bulletin of the Seismological Society of America},
+	pages = {1365--1385},
+	volume = {107},
+	number = {3},
+	doi = {10.1785/0120160198},
+	url = {http://dx.doi.org/10.1785/0120160198},
+	langid = {en}
+}
+
+@article{nowickijessee2018a,
+	title = {A Global Empirical Model for Near{-}Real{-}Time Assessment of Seismically Induced Landslides},
+	author = {Nowicki Jessee, M. A. and Hamburger, M. W. and Allstadt, K. and Wald, D. J. and Robeson, S. M. and Tanyas, H. and Hearne, M. and Thompson, E. M.},
+	year = {2018},
+	month = {08},
+	date = {2018-08},
+	journal = {Journal of Geophysical Research: Earth Surface},
+	pages = {1835--1859},
+	volume = {123},
+	number = {8},
+	doi = {10.1029/2017jf004494},
+	url = {http://dx.doi.org/10.1029/2017JF004494},
+	langid = {en}
+}
